--- a/Frontend/src/app/pages/dashboard/group-overview/panel/panel.component.html
+++ b/Frontend/src/app/pages/dashboard/group-overview/panel/panel.component.html
@@ -15,7 +15,7 @@
             <td>{{e.status}}</td>
           </tr>
           <tr>
-            <td>Anwesend:</td>
+            <td>Erreichbar:</td>
             <td>
               <clr-icon shape="check" class="is-success" *ngIf="e.erreichbar"></clr-icon>
               <clr-icon shape="times" class="is-error" *ngIf="!e.erreichbar"></clr-icon>
