--- a/Frontend/src/app/ui/layout/main/main.component.scss
+++ b/Frontend/src/app/ui/layout/main/main.component.scss
@@ -1,8 +1,7 @@
-#innerSidebarSelector {
-    position: sticky;
-    margin-right: 20px;
-}
-
 #inner-content-area {
     background-color: inherit;
+}
+
+#outer-sidebar {
+    background-color: #e8e8e8;
 }
