--- a/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
+++ b/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
@@ -2,20 +2,20 @@
 
   <ng-container *ngIf="employees && employees.length != 0">
     <clr-datagrid *ngIf="ready">
-      <clr-dg-column>Personalnummer</clr-dg-column>
       <clr-dg-column>Name</clr-dg-column>
+      <clr-dg-column>Personalnummer</clr-dg-column>
       <clr-dg-column>Status</clr-dg-column>
       <clr-dg-column>Rechteklasse</clr-dg-column>
-      <clr-dg-column>Anwesend</clr-dg-column>
+      <clr-dg-column>Erreichbar</clr-dg-column>
 
       <clr-dg-row *clrDgItems="let employee of employees"
         [class.leader_row]="employee.personalnummer === leader.personalnummer">
-        <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
         <clr-dg-cell>
           <a routerLink="/employee/{{employee.personalnummer}}">
             {{employee | employeeName}}
           </a>
         </clr-dg-cell>
+        <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
         <clr-dg-cell>{{employee.status}}</clr-dg-cell>
         <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
         <clr-dg-cell>
