--- a/Frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -16,3 +16,34 @@
     display: initial;
   }
 }
+
+#toggle,
+#toggle2 {
+  display: none;
+}
+
+#expand {
+  height: auto;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s linear;
+}
+
+#expand2 {
+  height: auto;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s linear;
+}
+
+#toggle:checked~#expand {
+  max-height: 500px; //just something big enough to render everything
+}
+
+#toggle2:checked~#expand2 {
+  max-height: 2500px;
+}
+
+.custom-section-header {
+  display: inline-block;
+}
