--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -8,12 +8,10 @@
       {{current.title}}
 
       <clr-vertical-nav-group-children *clrIfExpanded="current === sidebarLinks[0]">
-        <ng-container *ngFor="let sub of current.links">
-          <a clrVerticalNavLink routerLink="{{sub.link}}" routerLinkActive="active">
-            <clr-icon [attr.shape]="sub.icon"></clr-icon>
-            {{sub.title}}
-          </a>
-        </ng-container>
+        <a clrVerticalNavLink routerLink="{{sub.link}}" routerLinkActive="active" *ngFor="let sub of current.links">
+          <clr-icon [attr.shape]="sub.icon"></clr-icon>
+          {{sub.title}}
+        </a>
       </clr-vertical-nav-group-children>
 
     </clr-vertical-nav-group>
@@ -31,5 +29,5 @@
     <clr-icon shape="certificate" clrVerticalNavIcon></clr-icon>
     Credit
   </a>
-  
+
 </clr-vertical-nav>
