--- a/Frontend/src/app/pages/group-stats/group-stats.component.html
+++ b/Frontend/src/app/pages/group-stats/group-stats.component.html
@@ -1,1 +1,19 @@
-<p>group-stats works!</p>
+<div class="clr-row">
+  <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
+    <div class="card">
+      <div class="card-header">
+        Header
+      </div>
+      <div class="card-block">
+        <div class="card-title">
+          Block
+        </div>
+        <div class="card-text">
+          ...
+        </div>
+      </div>
+      <div class="card-footer">
+      </div>
+    </div>
+  </div>
+</div>
