--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
         </clr-signpost>
       </td>
       <td>
-        <form clrForm (submit)="changeStatus()" style="display: inline-block;">
+        <form clrForm (submit)="changeStatus()">
           <clr-datalist-container>
             <label>Status</label>
             <input name="Option" clrDatalistInput [(ngModel)]="status" />
