--- a/Frontend/src/app/pages/group-stats/group-stats.component.html
+++ b/Frontend/src/app/pages/group-stats/group-stats.component.html
@@ -2,14 +2,16 @@
   <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
     <div class="card">
       <div class="card-header">
-        Header
+        {{group.bezeichnung}}
       </div>
       <div class="card-block">
         <div class="card-title">
-          Block
+          Allgemeine Daten
         </div>
         <div class="card-text">
-          ...
+          <table>
+              
+          </table>
         </div>
       </div>
       <div class="card-footer">
