--- a/Frontend/src/app/pages/group-stats/group-stats.component.scss
+++ b/Frontend/src/app/pages/group-stats/group-stats.component.scss
@@ -1,18 +1,3 @@
-table {
-  border: none;
-  width: 50%;
-
-  tr {
-    text-align: left;
-
-    td {
-
-      align-content: left;
-      width: 10%;
-
-      form {
-        margin: 0;
-      }
-    }
-  }
+.leader_row {
+    background-color: #d8e3e9;
 }
