--- a/Frontend/src/app/pages/group-stats/group-stats.component.html
+++ b/Frontend/src/app/pages/group-stats/group-stats.component.html
@@ -7,7 +7,7 @@
   <clr-datagrid>
     <clr-dg-column>Name</clr-dg-column>
     <clr-dg-column>Erreichbar</clr-dg-column>
-    <clr-dg-column>Stauts</clr-dg-column>
+    <clr-dg-column>Status</clr-dg-column>
     <clr-dg-column>Personalnummer</clr-dg-column>
 
     <clr-dg-row *ngFor="let m of members" [class.leader_row]="m.personalnummer === group.leiter">
