Nils macht Zeug

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
         <form clrForm (submit)="changeStatus()">
           <clr-datalist-container>
             <label>Status</label>
-            <input name="status" clrDatalistInput [(ngModel)]="status" />
+            <input name="status" value={{user.status}} clrDatalistInput [(ngModel)]="status"/>
             <datalist>
               <option [value]="'Online'"></option>
               <option [value]="'Abwesend'"></option>
